# karmabot

./: .dockerignore  .env  .gitignore  Dockerfile  LICENCE  Makefile  Pipfile  README.md  app.py  config.py  config.yml  config.yml.template  docker_build.sh  docker_run.sh  karma_manager.py  karmabot.py  logging.yml  parse.py  poetry.toml  pyproject.toml  transport.py  words.py
data/: config.yml
karmabot/: app.py  auto_digest.py  config.py  karma_manager.py  karmabot.py  logging.py  orm.py  parse.py  scheduler.py  slack_utils.py  transport.py  words.py
karmabot/backup/: __init__.py  dropbox.py  packer.py
karmabot/data/: config.yml
karmabot/lang/en/LC_MESSAGES/: messages.mo  messages.po
karmabot/lang/uk/LC_MESSAGES/: messages.mo
lang/: karmabot.pot
lang/en/LC_MESSAGES/: messages.mo  messages.po
lang/ru/LC_MESSAGES/: messages.po
lang/uk/LC_MESSAGES/: messages.mo  messages.po
src/: karma_manager.py
systemd/: karmabot.service
tests/: common.py  conftest.py  test_auto_digest.py  test_karma_manager.py  test_packer.py  test_transport.py
