[tool.poetry]
name = "karmabot"
version = "1.0.0"
description = "Slack bot that listens for and performs karma operations"
readme = "README.md"
license = "LICENSE"
authors = ["Evgen Druzhynin <evgen.druzhynin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apscheduler = "^3.11.0"
babel = "^2.16.0"
pyyaml = "^6.0.0"
slack-sdk = "^3.33.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.8.0"

[tool.ruff]
target-version = "py312"
respect-gitignore = true
force-exclude = true  # exclude ignored files if they passed via CLI
fix = true
line-length = 99
indent-width = 4

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "D", # pydocstyle
    "F", # pyflakes
    "G", # flake8-logging-format
    "T10", # flake8-debugger
    "UP", # pyupgrade
    "YTT", # flake-2020
]

[tool.ruff.lint.pet-file-ignores]
"tests/**/*.py" = [
    "B011", # do not flag asserts
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
karmabot = "app:main"
