[tool.poetry]
name = "karmabot"
version = "1.0.0"
description = "Slack bot that listens for and performs karma operations"
readme = "README.md"
license = "LICENSE"
authors = ["Eugene <1511447+fa7ca7@users.noreply.github.com>"]

include = [
    "data/config.yml",
    "lang/**/*.mo",
]

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.11.0"
pyyaml = "^6.0.0"
slack-sdk = "^3.33.0"
sqlalchemy = "^2.0.0"
types-pyyaml = "^6.0.12.20240917"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.ruff]
target-version = "py310"
respect-gitignore = true
force-exclude = true  # exclude ignored files if they passed via CLI
fix = true
line-length = 99
indent-width = 4

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "T10", # flake8-debugger
    "UP", # pyupgrade
    "YTT", # flake-2020
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011", # do not flag asserts
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
disable_error_code = "import-untyped"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
karmabot = "karmabot.app:cli_app"
karmabot-init = "karmabot.app:cli_init"
